Added unused plugins to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,55 @@
 /plugin/ZoomMeetingRecorder/
 /plugin/oncologytube/
 /plugin/predefinedCategory/
+/plugin/AD_Server/
+/plugin/AD_Server_Location/
+/plugin/ADs/
+/plugin/AWS_S3/
+/plugin/AdsForJesus/
+/plugin/Articles/
+/plugin/Blackblaze_B2/
+/plugin/BlockonomicsYPT/
+/plugin/BulkEmbed/
+/plugin/Chat2/
+/plugin/CloneSite/
+/plugin/CombineSites/
+/plugin/CookieAlert/
+/plugin/DiscordNotify/
+/plugin/DiskUploadQuota/
+/plugin/FTP_Storage/
+/plugin/GoogleAds_IMA/
+/plugin/IMDbScrape/
+/plugin/LiveLinks/
+/plugin/LoginLDAP/
+/plugin/LoginLinkedin/
+/plugin/LoginTwitter/
+/plugin/LoginYahoo/
+/plugin/MP4ThumbsAndGif/
+/plugin/MaintenanceMode/
+/plugin/Meet/
+/plugin/Notifications/
+/plugin/OptionsTest/
+/plugin/PayPalYPT/
+/plugin/PayPerView/
+/plugin/PlayLists/
+/plugin/PredefinedCategory/
+/plugin/PromoteVideos/
+/plugin/RazorPayYPT/
+/plugin/ReportVideo/
+/plugin/ShareSocialButtonsOnEmbed/
+/plugin/SlackBot/
+/plugin/SlackNotify/
+/plugin/SubtitleSwitcher/
+/plugin/VideoResolutionSwitcher/
+/plugin/VideoTags/
+/plugin/VimeoAPI/
+/plugin/WWBN/
+/plugin/YPTSocket/
+/plugin/YouPHPFlix2/
+/plugin/YouTube/
+/plugin/YouTubeAPI/
+/plugin/ZoomMeetingRecorder/
+
 /plugin/upload.sh
 /plugin/upload_local.sh
 /plugin/README.md
